<resources>
    <string name="app_name">Poultrygeist</string>
    <string name="chickenMenu_FalseAlarm">False Alarm</string>
    <string name="chickenMenu_WrongPosition">Wrong Position</string>
    <string name="chickenMenu_Cancel">Cancel</string>
    <string name="chickenMenu_Remove">Remove</string>
    <string name="houseViewMenu_edit">Edit House</string>
    <string name="title_ammonia"><b>Ammonia</b></string>
    <string name="title_temperature"><b>Temperature</b></string>
    <string name="title_humidity"><b>Humidity</b></string>
    <string name="title_addNewHouse"><b>Add New House</b></string>
    <string name="hint_addNewHouse"><b>Enter House Number</b></string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="hint_addHouseLength"><b>Enter House Length</b></string>
    <string name="hint_addHouseWidth"><b>Enter House Width</b></string>
    <string name="title_RemoveHouse"><b>Remove House</b></string>


</resources>
