<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".removeHouse">
    <TextView
        android:id="@+id/title_Remove"
        style="@style/PopUpWindowTitle"
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:gravity="center"
        android:text="@string/title_RemoveHouse"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spinner_houseId"
        android:layout_marginTop="10dp"

        />
    <Spinner
        android:id="@+id/spinner_houseId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/title_Remove"
        app:layout_constraintBottom_toTopOf="@id/buttons_remove" />

    <LinearLayout
        android:id="@+id/buttons_remove"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/spinner_houseId"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="bottom"
        >

        <Button
            android:id="@+id/buttons_remove_Cancel"
            style="?android:selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded_corners"
            android:text="@string/button_cancel"
            android:textColor="@color/white"
            android:onClick="cancel"/>

        <Button
            android:id="@+id/buttons_remove_Remove"
            android:background="@drawable/button_rounded_corners"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chickenMenu_Remove"
            android:textColor="@color/white"
            style="?android:selectableItemBackgroundBorderless"
            android:layout_margin="5dp"
            android:onClick="remove"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>